<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- 注：EditTextPreferenceはEditText属性を受け入れます。 -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!-- 注：EditTextPreferenceの要約は、アクティビティコードによってその値に設定する必要があります。 -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_lab_name"
        android:inputType="textCapWords"
        android:key="lab_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_lab_name" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_address"
        android:inputType="textCapWords"
        android:key="lab_address"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_address" />

</PreferenceScreen>
